Remove will-change to prevent blurriness on Windows Chrome & Edge
Found from https://stackoverflow.com/a/54082690.

--- a/app/src/styles/animations.scss
+++ b/app/src/styles/animations.scss
@@ -61,13 +61,11 @@ $height-timing-function: ease-in-out;
         $delay hidden,
         $expand-duration $expand-timing-function expand $delay,
         ($fade-duration * 0.5) ease-in fade-in $delay;
-      will-change: opacity, transform;
 
       @media (prefers-reduced-motion) {
         animation:
           $delay hidden,
           ($fade-duration * 0.5) ease-in fade-in $delay;
-        will-change: opacity;
       }
     }
   }
